# pyoranris

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
configs/: indoor_mobility.yaml  kpm_mac_rsrp.yaml  kpm_srs.yaml  lab_default.yaml  offline_sim.yaml  srs_cir.yaml
docker/: docker-compose.yml
docker/gui/: .gitignore  Dockerfile.novnc  Dockerfile.x11  README.md  docker-compose.novnc.yml  docker-compose.x11.yml  novnc-supervisord.conf  start_novnc_container.sh  start_x11_container.sh  x11_notes.md
docs/: GOLDEN_PATH.md  INDOOR_MOBILITY.md  KPM_MAC_RSRP.md  KPM_SRS.md  LAB_SETUP.md  MIGRATION.md  SRS_CIR.md
legacy/: INDOORS_MILCOM_DEMO_debugging_v2.py  Instructions  README.md  classes_file.py  instruction_v2  robot_detector.py
scripts/: fake_rsrp_server.py  run_gui.sh
src/pyoranris/: __init__.py  __main__.py  app.py  cli.py  config.py
src/pyoranris/algorithms/: beam_optimizer.py  mobility.py  signal_processing.py
src/pyoranris/controllers/: controller.py
src/pyoranris/data/: experiment_logger.py  io.py
src/pyoranris/devices/: __init__.py  marvelmind.py  marvelmind_device.py  position.py  ris.py  ris_rest.py  robot.py  ue_evk.py
src/pyoranris/gui/: dpg_gui.py
src/pyoranris/lab/: __init__.py  flexric_ops.py  xapp_monitor_ops.py  (+1 more)
tests/: test_beam_optimizer.py  test_config.py  test_controller_phase2.py  test_kpm_srs_combo.py  test_mac_rsrp_client.py  test_ris_rest.py  test_srs_cir_client.py  test_tcp_interface.py  test_x11_display.py  test_xapp_monitor_server.py  test_xapp_server.py
(+10 files in other folders)
